Index dan Css update

--- a/index.html
+++ b/index.html
@@ -1,240 +1,256 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- bootstrap dan CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
+  <!-- bootstrap dan CSS -->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
 
-    <!-- FontAwesome -->
-    <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.css">
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.css">
 
-    <!-- Animate On Scroll Library -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- Animate On Scroll Library -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <title>Web Profile | Naufal</title>
+  <title>Web Profile | Naufal</title>
 
 </head>
+
 <body class="text-white bg-dark" id="home" style="padding-top: 15px;">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm text-uppercase">
-      <div class="container">
-        <h3 class="float-md-start text-light">Naufal.</h3>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item" >
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills & Education</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#findme">Find Me</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm text-uppercase">
+    <div class="container">
+      <h3 class="float-md-start text-light">Naufal.</h3>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills & Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#findme">Find Me</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <!-- Akhir Navbar -->
-    
-    <!-- Jumbotron -->
-    <section id="home" class="jumbotron text-center">
-      <p class="lead">HEY! I AM</p>
-      <h1 id="Namaabot" class="display-3 text-uppercase">Muhammad Naufal Hafizh</h1>
-      <p class="lead leadinfor">{ Learn | Practice | Optimism | Feedback }</p>
-    </section>
-    <!-- Akhir Jumbotron -->
+    </div>
+  </nav>
+  <!-- Akhir Navbar -->
 
-    <!-- Arrow -->
-    <section id="arrow" class="jumbotron text-center">
-      <p class="lead text-uppercase">
-        Scroll Down
+  <!-- Jumbotron -->
+  <section id="home" class="jumbotron text-center">
+    <p class="lead">HEY! I AM</p>
+    <h1 id="Namaabot" class="display-3 text-uppercase">Muhammad Naufal Hafizh</h1>
+    <p class="lead leadinfor">{ Learn | Practice | Optimism | Feedback }</p>
+  </section>
+  <!-- Akhir Jumbotron -->
+
+  <!-- Arrow -->
+  <section id="arrow" class="jumbotron text-center">
+    <p class="lead text-uppercase">
+      Scroll Down
     </p>
-      <div class="arrow bounce">
-        <i class="fa fa-angle-double-down fa-5x"></i>
+    <div class="arrow bounce">
+      <i class="fa fa-angle-double-down fa-5x"></i>
+    </div>
+  </section>
+  <!-- Akhir -->
+
+  <!-- About -->
+  <section id="about" style="background-color: #2D3541">
+    <div class="container">
+      <div class="row text-center mb-3">
+        <div class="col">
+        </div>
       </div>
-    </section>
-    <!-- Akhir -->
+      <div class="row justify-content-center fs-5 text-justify">
+        <div data-aos="fade-right" class="col-md-3 mb-2">
+          <div class="card" style="border: none; border-radius: 12px;">
+            <img src="img/about-min.jpg" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
+          </div>
+        </div>
+        <div data-aos="fade-left" class="col-md-5">
+          <h2>Wanna Know Me ?</h2>
+          <p class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. A Informatics Undergraduate student,
+            currently studying in Yogyakarta. Curious and fast learner</p>
+          <p class="lead">Have an interest in : </p>
+          <ul class="fa-ul">
+            <li class="lead"><span class="fa-li fas fa-edit"></span>UI/UX Design</li>
+            <li class="lead"><span class="fa-li fas fa-edit"></span>Web Programming</li>
+            <li class="lead"><span class="fa-li fas fa-edit"></span>Mobile Programming</li>
+          </ul>
+          <div class="row mb-3">
 
-    <!-- About -->
-    <section id="about">
-      <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-          </div>
-        </div>
-        <div class="row justify-content-center fs-5 text-justify">
-          <div data-aos="fade-right" class="col-md-3 mb-2">
-            <div class="card" style="border: none; border-radius: 12px;">
-              <img src="img/about-min.jpg" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
-            </div>
-          </div>
-          <div data-aos="fade-left" class="col-md-5">
-            <h2>Wanna Know Me ?</h2>
-            <p class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner</p>
-            <p class="lead">Have an interest in : </p>
-            <ul class="fa-ul">
-              <li class="lead"><span class="fa-li fas fa-edit"></span>UI/UX Design</li>
-              <li class="lead"><span class="fa-li fas fa-edit"></span>Web Programming</li>
-              <li class="lead"><span class="fa-li fas fa-edit"></span>Mobile Programming</li>
-            </ul>
-            <div class="row mb-3">
-              
-            </div>
-          </div>
-        </div>
-      </div>      
-    </section>
-    <!-- Akhir About -->
-
-    <!-- skill dan akademik -->
-    <section class="" id="skills">
-      <div style="margin-right: 0px; margin-left: 0px;" class="row justify-content-center fs-5">
-        <div class="col-md-4">
-          <div class="row">
-              <h2 data-aos="fade-up" >Learning Process</h2>
-            <div data-aos="zoom-in" class="col-md-4">
-              <div class="main-skills skill1">
-                <div class="card-skills text-center">
-                  <img src="img/html.png" alt="" width="37">
-                  <h6>HTML</h6>
-                </div>
-              </div>
-            </div>
-            <div data-aos="zoom-in" class="col-md-4">
-              <div class="main-skills skill2">
-                <div class="card-skills text-center">
-                  <img src="img/css.png" alt="" width="37">
-                  <h6>CSS</h6>
-                </div>
-              </div>
-            </div>
-            <div data-aos="zoom-in" class="col-md-4">
-              <div class="main-skills skill3">
-                <div class="card-skills text-center">
-                  <img src="img/php.png" alt="" width="65">
-                  <h6>PHP</h6>
-                </div>
-              </div>
-            </div>
-            <div data-aos="zoom-in" class="col-md-4">
-              <div class="main-skills skill4">
-                <div class="card-skills text-center">
-                  <img src="img/js.png" alt="" width="30">
-                  <h6>Javascript</h6>
-                </div>
-              </div>
-            </div>
-            <div data-aos="zoom-in" class="col-md-4">
-              <div class="main-skills skill5">
-                <div class="card-skills text-center">
-                  <img src="img/c++.png" alt="" width="45">
-                  <h6>C++</h6>
-                </div>
-              </div>
-            </div>
-            <div data-aos="zoom-in" class="col-md-4">
-              <div class="main-skills skill6">
-                <div class="card-skills text-center">
-                  <img src="img/java.png" alt="" width="40">
-                  <h6>Java</h6>
-                </div>
-              </div>
-            </div>
-            <div data-aos="zoom-in" class="col-md-4">
-              <div class="main-skills skill7">
-                <div class="card-skills text-center">
-                  <img src="img/python.png" alt="" width="38">
-                  <h6>Python</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 akademi">
-          <div class="akademi-isi">
-              <h2 data-aos="fade-up" style="padding-left: 20px;">Education</h2>
-            <ul class="timeline">
-              <li>
-                <a data-aos="zoom-in" href="#">UNIVERSITAS AHMAD DAHLAN</a>
-                <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
-              </li>
-              <li>
-                <a data-aos="zoom-in" href="#">SMAN 3 MAGETAN</a>
-                <p data-aos="zoom-in" >Science <br> 2017 - 2019 </p>
-              </li>
-              <li>
-                <a data-aos="zoom-in" href="#">SMPN 1 NGARIBOYO</a>
-                <p data-aos="zoom-in" >2014 - 2017</p>
-              </li>
-              <li>
-                <a data-aos="zoom-in" href="#">SDN 2 BANYUDONO</a>
-                <p data-aos="zoom-in" >2008- 2014</p>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
     </div>
   </section>
-    <!-- akhir skill dan akademik -->
+  <!-- Akhir About -->
 
-    <!-- FindMe -->
-    <footer class="footer text-center" style="background-color: #ffffff"  id="findme">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-4 mb-5 mb-lg-0">
+  <!-- skill dan akademik -->
+  <section class="" id="skills">
+    <div style="margin-right: 0px; margin-left: 0px;" class="row justify-content-center fs-5">
+      <div class="col-md-4">
+        <div class="row">
+          <h2 data-aos="fade-up">Learning Process</h2>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills skill1">
+              <div class="card-skills text-center">
+                <img src="img/html.png" alt="" width="37">
+                <h6>HTML</h6>
               </div>
-              <div id="" class="col-lg-4 mb-5 mb-lg-0" >
-                  <h4 data-aos="fade-down" class="text-uppercase mb-3 text-dark">SOCIAL MEDIA</h4>
-                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
-                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.facebook.com/naufal.h.hafizh"><i class="fab fa-facebook-square fa-2x"></i></a>
-                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
-                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i class="fab fa-linkedin fa-2x"></i></a>
-                  <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
             </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills skill2">
+              <div class="card-skills text-center">
+                <img src="img/css.png" alt="" width="37">
+                <h6>CSS</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills skill3">
+              <div class="card-skills text-center">
+                <img src="img/php.png" alt="" width="65">
+                <h6>PHP</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills skill4">
+              <div class="card-skills text-center">
+                <img src="img/js.png" alt="" width="30">
+                <h6>Javascript</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills skill5">
+              <div class="card-skills text-center">
+                <img src="img/c++.png" alt="" width="45">
+                <h6>C++</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills skill6">
+              <div class="card-skills text-center">
+                <img src="img/java.png" alt="" width="40">
+                <h6>Java</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills skill7">
+              <div class="card-skills text-center">
+                <img src="img/python.png" alt="" width="38">
+                <h6>Python</h6>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-  </footer>
-    <!-- Akhir -->
-
-    <!-- Footer -->
-    <div id="copyright">
-      <div class="copyright py-1 text-center bg-dark text-white">
-        <p class="font-weight-light text-light">Copyright © 2021 <a href="https://www.instagram.com/mnaufalhafizh20/?hl=id" class="text-white font-weight-bold text-uppercase" style="text-decoration: none;">Muhammad Naufal Hafizh. </a>All Rights Reserved</p>
+      <div class="col-md-3 akademi">
+        <div class="akademi-isi">
+          <h2 data-aos="fade-up" style="padding-left: 20px;">Education</h2>
+          <ul class="timeline">
+            <li>
+              <a data-aos="zoom-in" href="#">UNIVERSITAS AHMAD DAHLAN</a>
+              <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
+            </li>
+            <li>
+              <a data-aos="zoom-in" href="#">SMAN 3 MAGETAN</a>
+              <p data-aos="zoom-in">Science <br> 2017 - 2019 </p>
+            </li>
+            <li>
+              <a data-aos="zoom-in" href="#">SMPN 1 NGARIBOYO</a>
+              <p data-aos="zoom-in">2014 - 2017</p>
+            </li>
+            <li>
+              <a data-aos="zoom-in" href="#">SDN 2 BANYUDONO</a>
+              <p data-aos="zoom-in">2008- 2014</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-     <!-- Akhir Footer -->
+    </div>
+  </section>
+  <!-- akhir skill dan akademik -->
 
-     <!-- JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  <!-- FindMe -->
+  <footer class="footer text-center" style="background-color: #2D3541" id="findme">
+    <div class="container">
+      <div id="">
+        <h4 data-aos="fade-down" class="text-uppercase mb-3 text-light">Contact Me</h4>
+        <div>
+          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+            href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
+          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+            href="https://www.facebook.com/naufal.h.hafizh"><i class="fab fa-facebook-square fa-2x"></i></a>
+          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+            href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
+          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+            href="https://www.linkedin.com/in/muhammad-naufal-hafizh-52411120a/"><i
+              class="fab fa-linkedin fa-2x"></i></a>
+          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
+            href="https://github.com/NaufalHafizh"><i class="fab fa-github fa-2x"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- Akhir -->
 
-    <!-- Animate On Scroll JS -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        duration: 1000,
-      });
-    </script>
+  <!-- Footer -->
+  <div id="copyright">
+    <div style="background-color: #2D3541" class="copyright py-1 text-center text-white">
+      <p class="font-weight-light text-light">Copyright © 2021 <a
+          href="https://www.instagram.com/mnaufalhafizh20/?hl=id" class="text-white font-weight-bold text-uppercase"
+          style="text-decoration: none;">Muhammad Naufal Hafizh. </a>All Rights Reserved</p>
+    </div>
+  </div>
+  <!-- Akhir Footer -->
 
-    <!-- GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
-    <script>
+  <!-- JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+  </script>
 
-      gsap.registerPlugin(TextPlugin);
-      gsap.from(".leadinfor", {duration: 3, text: "", delay: 0.5,})
+  <!-- Animate On Scroll JS -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000,
+    });
+  </script>
 
-    </script>
+  <!-- GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
+  <script>
+    gsap.registerPlugin(TextPlugin);
+    gsap.from(".leadinfor", {
+      duration: 3,
+      text: "",
+      delay: 0.5,
+    })
+  </script>
 
-  
+
 </body>
+
 </html>
