--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div data-aos="fade-left" class="col-md-5">
-          <h2>Wanna Know Me ?</h2>
+          <h2>Wanna Know Me ?</h2> <br>
           <p class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. A Informatics Undergraduate student,
             currently studying in Yogyakarta. Curious and fast learner</p>
           <p class="lead">Have an interest in : </p>
@@ -166,7 +166,7 @@
               <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
             </li>
             <li>
-              <a data-aos="zoom-in" href="#">SMAN 3 MAGETAN</a>
+              <a data-aos="zoom-in" href="https://smagamagetan.sch.id/">SMAN 3 MAGETAN</a>
               <p data-aos="zoom-in">Science <br> 2017 - 2019 </p>
             </li>
             <li>
