--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="text-white bg-dark" id="home" style="padding-top: 15px;">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm text-uppercase">
+  <nav class="navbar navbar-expand-lg navbar-dark text-uppercase">
     <div class="container">
       <h3 class="float-md-start text-light">Naufal.</h3>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -32,16 +32,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            <a class="nav-link aktif" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link aktif" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills & Education</a>
+            <a class="nav-link aktif" href="#skills">Skills & Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#findme">Find Me</a>
+            <a class="nav-link aktif" href="#findme">Find Me</a>
           </li>
         </ul>
       </div>
