--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="home" class="jumbotron text-center">
     <p class="lead">HEY! I AM</p>
     <h1 id="Namaabot" class="display-3 text-uppercase">Muhammad Naufal Hafizh</h1>
-    <p class="lead leadinfor">{ Learn | Practice | Optimism | Feedback }</p>
+    <p class="lead leadinfor">{ Learn | Practice | Optimism }</p>
   </section>
   <!-- Akhir Jumbotron -->
 
@@ -79,13 +79,13 @@
         </div>
         <div data-aos="fade-left" class="col-md-5">
           <h2>Wanna Know Me ?</h2> <br>
-          <p class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. A Informatics Undergraduate student,
-            currently studying in Yogyakarta. Curious and fast learner</p>
+          <p class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. Living in magetan, east java. A
+            Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner</p>
           <p class="lead">Have an interest in : </p>
           <ul class="fa-ul">
             <li class="lead"><span class="fa-li fas fa-edit"></span>UI/UX Design</li>
-            <li class="lead"><span class="fa-li fas fa-edit"></span>Web Programming</li>
-            <li class="lead"><span class="fa-li fas fa-edit"></span>Mobile Programming</li>
+            <li class="lead"><span class="fa-li fas fa-edit"></span>Web Development</li>
+            <li class="lead"><span class="fa-li fas fa-edit"></span>Mobile Development</li>
           </ul>
         </div>
       </div>
