--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
             <a class="nav-link aktif" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link aktif" href="#skills">Skills & Education</a>
+            <a class="nav-link aktif" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link aktif" href="#experience">experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link aktif" href="#contact">Contact Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link aktif" href="#findme">Find Me</a>
@@ -51,9 +57,9 @@
 
   <!-- Jumbotron -->
   <section id="home" class="jumbotron text-center">
-    <p class="lead">HEY! I AM</p>
-    <h1 id="Namaabot" class="display-3 text-uppercase">Muhammad Naufal Hafizh</h1>
-    <p class="lead leadinfor">{ Learn | Practice | Optimism }</p>
+    <h2 class="">HI, I'M</h2>
+    <h1 id="Namaabot" class="display-2 text-uppercase">Muhammad Naufal Hafizh</h1>
+    <p class="lead leadinfor">Front End Developer | Back End Developer</p>
   </section>
   <!-- Akhir Jumbotron -->
 
@@ -72,33 +78,49 @@
   <section id="about" style="background-color: #2D3541">
     <div class="container">
       <div class="row justify-content-center fs-5 text-justify">
+        <div class="col-md-5">
+          <h2 data-aos="fade-right" style="color: #41E6CA;">Wanna Know Me ?</h2>
+          <p data-aos="fade-right" class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. Living in magetan,
+            east java. A Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner
+          </p>
+          <div class="akademi-isi">
+            <h2 data-aos="fade-right" style="padding-left: 0px; color: #41E6CA;">Education</h2>
+            <ul class="timeline">
+              <li>
+                <a data-aos="zoom-in" href="#">UNIVERSITAS AHMAD DAHLAN</a>
+                <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
+              </li>
+              <li>
+                <a data-aos="zoom-in" href="https://smagamagetan.sch.id/">SMAN 3 MAGETAN</a>
+                <p data-aos="zoom-in">Science <br> 2017 - 2019 </p>
+              </li>
+              <li>
+                <a data-aos="zoom-in" href="#">SMPN 1 NGARIBOYO</a>
+                <p data-aos="zoom-in">2014 - 2017</p>
+              </li>
+              <li>
+                <a data-aos="zoom-in" href="#">SDN 2 BANYUDONO</a>
+                <p data-aos="zoom-in">2008- 2014</p>
+              </li>
+            </ul>
+          </div>
+        </div>
         <div data-aos="fade-right" class="col-md-4 mb-2">
           <div class="card" style="border: none; border-radius: 12px;">
             <img src="img/about-min.jpg" style="border: none; border-radius: 12px;" class="card-img-top" alt="porto1">
           </div>
-        </div>
-        <div data-aos="fade-left" class="col-md-5">
-          <h2>Wanna Know Me ?</h2> <br>
-          <p class="lead">Muhammad Naufal Hafizh, I'm a Junior Web Developer. Living in magetan, east java. A
-            Informatics Undergraduate student, currently studying in Yogyakarta. Curious and fast learner</p>
-          <p class="lead">Have an interest in : </p>
-          <ul class="fa-ul">
-            <li class="lead"><span class="fa-li fas fa-edit"></span>UI/UX Design</li>
-            <li class="lead"><span class="fa-li fas fa-edit"></span>Web Development</li>
-            <li class="lead"><span class="fa-li fas fa-edit"></span>Mobile Development</li>
-          </ul>
         </div>
       </div>
     </div>
   </section>
   <!-- Akhir About -->
 
-  <!-- skill dan akademik -->
+  <!-- skill dan tools -->
   <section class="" id="skills">
     <div style="margin-right: 0px; margin-left: 0px;" class="row justify-content-center fs-5">
       <div class="col-md-4">
         <div class="row">
-          <h2 data-aos="fade-up">Learning Process</h2>
+          <h2 data-aos="fade-up">Skills</h2>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill1">
               <div class="card-skills text-center">
@@ -158,26 +180,40 @@
         </div>
       </div>
       <div class="col-md-4 akademi">
-        <div class="akademi-isi">
-          <h2 data-aos="fade-up" style="padding-left: 20px;">Education</h2>
-          <ul class="timeline">
-            <li>
-              <a data-aos="zoom-in" href="#">UNIVERSITAS AHMAD DAHLAN</a>
-              <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
-            </li>
-            <li>
-              <a data-aos="zoom-in" href="https://smagamagetan.sch.id/">SMAN 3 MAGETAN</a>
-              <p data-aos="zoom-in">Science <br> 2017 - 2019 </p>
-            </li>
-            <li>
-              <a data-aos="zoom-in" href="#">SMPN 1 NGARIBOYO</a>
-              <p data-aos="zoom-in">2014 - 2017</p>
-            </li>
-            <li>
-              <a data-aos="zoom-in" href="#">SDN 2 BANYUDONO</a>
-              <p data-aos="zoom-in">2008- 2014</p>
-            </li>
-          </ul>
+        <div class="row">
+          <h2 data-aos="fade-up">Tools</h2>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills tool1">
+              <div class="card-skills text-center">
+                <img src="img/photoshop.png" alt="" width="37">
+                <h6>Adobe Photoshop</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills tool2">
+              <div class="card-skills text-center">
+                <img src="img/premiere.png" alt="" width="37">
+                <h6>Adobe Premiere Pro</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills tool3">
+              <div class="card-skills text-center">
+                <img src="img/after.png" alt="" width="38">
+                <h6>Adobe After Effects</h6>
+              </div>
+            </div>
+          </div>
+          <div data-aos="zoom-in" class="col-md-4">
+            <div class="main-skills tool4">
+              <div class="card-skills text-center">
+                <img src="img/vsc.png" alt="" width="38">
+                <h6>Visual Studio Code</h6>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -185,13 +221,58 @@
   </section>
   <!-- akhir skill dan akademik -->
 
+  <!-- Experience -->
+  <section style="background-color: #2D3541" id="experience">
+    <div class="container text-center">
+      <h1 data-aos="fade-up">Experience</h1>
+      <center>
+        <div data-aos="fade-down" id="carouselExampleInterval" class="carousel slide w-75" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img src="img/1.jpg" class="d-block w-75" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="img/2.jpg" class="d-block w-75" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/3.jpeg" class="d-block w-75" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/4.jpeg" class="d-block w-75" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </center>
+    </div>
+  </section>
+  <!-- Akhir Experience -->
+
+  <!-- contact Me -->
+  <Section id="contact">
+    <div class="container justify-content-center text-center">
+      <h4 data-aos="fade-down" style="color: #41E6CA;">If You Have Any Project In Your Mind</h4>
+      <a data-aos="zoom-in" class="btn btn-light mt-3" href="mailto:muhammdnaufal40@gmail.com"> Contact Me</a>
+    </div>
+  </Section>
+  <!-- Akhir contact Me -->
+
 
 
   <!-- FindMe -->
-  <footer class="footer text-center" style="background-color: #2D3541" id="findme">
+  <footer style="background-color: #2D3541" class="footer text-center" id="findme">
     <div class="container">
       <div id="">
-        <h4 data-aos="fade-down" class="text-uppercase mb-3 text-light">Contact Me</h4>
+        <h4 style="color: #41E6CA;" data-aos="fade-down" class="text-uppercase mb-3">Sosial Media</h4>
         <div>
           <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
             href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
@@ -211,11 +292,11 @@
   <!-- Akhir -->
 
   <!-- Footer -->
-  <div id="copyright">
-    <div style="background-color: #2D3541" class="copyright py-1 text-center text-white">
+  <div id="copyright" style="background-color: #2D3541">
+    <div class="copyright py-1 text-center text-white">
       <p class="font-weight-light text-light">Copyright © 2021 <a
-          href="https://www.instagram.com/mnaufalhafizh20/?hl=id" class="text-white font-weight-bold text-uppercase"
-          style="text-decoration: none;">Muhammad Naufal Hafizh. </a>All Rights Reserved</p>
+          href="https://www.instagram.com/mnaufalhafizh20/?hl=id" class=" text-light font-weight-bold text-uppercase"
+          style="text-decoration: none;">Muhammad Naufal Hafizh</a></p>
     </div>
   </div>
   <!-- Akhir Footer -->
