--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
   <!-- Jumbotron -->
   <section id="home" class="jumbotron text-center">
-    <h2 class="">HI, I'M</h2>
-    <h1 id="Namaabot" class="display-2 text-uppercase">Muhammad Naufal Hafizh</h1>
+    <h3 class="">HI, <span style="color: #41E6CA;">I'M</span></h3>
+    <h1 id=" Namaabot" class="display-2 text-uppercase">Muhammad Naufal Hafizh</h1>
     <p class="lead leadinfor">Front End Developer | Back End Developer</p>
   </section>
   <!-- Akhir Jumbotron -->
@@ -85,7 +85,7 @@
           </p>
           <div class="akademi-isi">
             <h2 data-aos="fade-right" style="padding-left: 0px; color: #41E6CA;">Education</h2>
-            <ul class="timeline">
+            <ul data-aos="fade-right" class="timeline">
               <li>
                 <a data-aos="zoom-in" href="#">UNIVERSITAS AHMAD DAHLAN</a>
                 <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
@@ -325,8 +325,6 @@
       delay: 0.5,
     })
   </script>
-
-
 </body>
 
 </html>
