--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="text-white bg-dark" id="home" style="padding-top: 15px;">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark text-uppercase">
+  <nav class="navbar navbar-expand-lg shadow-sm navbar-dark text-uppercase">
     <div class="container">
       <h3 class="float-md-start text-light">Naufal.</h3>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,9 +45,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link aktif" href="#contact">Contact Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link aktif" href="#findme">Find Me</a>
           </li>
         </ul>
       </div>
@@ -253,6 +250,41 @@
           </button>
         </div>
       </center>
+      <h1 class="mt-5" data-aos="fade-up">My Project</h1>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div data-aos="zoom-in" class="col">
+          <div style="background-color: #2D3541" class="card">
+            <div class="card-body">
+              <h5 class="card-title">Apotek Home</h5>
+            </div>
+            <img src="img/project1.png" class="card-img-top" alt="...">
+          </div>
+        </div>
+        <div data-aos="zoom-in" class="col">
+          <div style="background-color: #2D3541" class="card">
+            <div class="card-body">
+              <h5 class="card-title">Apotek Login</h5>
+            </div>
+            <img src="img/project2.png" class="card-img-top" alt="...">
+          </div>
+        </div>
+        <div data-aos="zoom-in" class="col">
+          <div style="background-color: #2D3541" class="card">
+            <div class="card-body">
+              <h5 class="card-title">Apotek Service</h5>
+            </div>
+            <img src="img/project3.png" class="card-img-top" alt="...">
+          </div>
+        </div>
+        <div data-aos="zoom-in" class="col">
+          <div style="background-color: #2D3541" class="card">
+            <div class="card-body">
+              <h5 class="card-title">Apotek Cart</h5>
+            </div>
+            <img src="img/project4.png" class="card-img-top" alt="...">
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- Akhir Experience -->
@@ -276,8 +308,6 @@
         <div>
           <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
             href="https://www.instagram.com/mnaufalhafizh20"><i class="fab fa-instagram fa-2x"></i></a>
-          <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
-            href="https://www.facebook.com/naufal.h.hafizh"><i class="fab fa-facebook-square fa-2x"></i></a>
           <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
             href="https://twitter.com/EfficientAnsici"><i class="fab fa-twitter-square fa-2x"></i></a>
           <a data-aos="zoom-in" class="btn btn-link btn-floating btn-lg text-light m-1"
