--- a/index.html
+++ b/index.html
@@ -330,10 +330,20 @@
     </div>
   </div>
   <!-- Akhir Footer -->
-
+  <div class="loader-warper">
+    <span class="loader"><span class="loader-inner"></span></span>
+  </div>
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+  </script>
+
+  <script>
+    $(window).on("load", function () {
+
+      $(".loader-warper").fadeOut("slow");
+
+    });
   </script>
 
   <!-- Animate On Scroll JS -->
