--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
   </script>
 
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script>
     $(window).on("load", function () {
 
