--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h2 data-aos="fade-right" style="padding-left: 0px; color: #41E6CA;">Education</h2>
             <ul data-aos="fade-right" class="timeline">
               <li>
-                <a data-aos="zoom-in" href="#">UNIVERSITAS AHMAD DAHLAN</a>
+                <a data-aos="zoom-in" href="https://uad.ac.id/id/">UNIVERSITAS AHMAD DAHLAN</a>
                 <p data-aos="zoom-in">Informatics Undergraduate student<br> 2019 - Now</p>
               </li>
               <li>
