--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
   <!-- Akhir Navbar -->
 
   <!-- Jumbotron -->
+  <div class="parallax"></div>
   <section id="home" class="jumbotron text-center">
     <h3 class="">HI, <span style="color: #41E6CA;">I'M</span></h3>
-    <h1 id=" Namaabot" class="display-2 text-uppercase">Muhammad Naufal Hafizh</h1>
+    <h1 id="Namaabot" class="display-2 text-uppercase">Muhammad Naufal Hafizh</h1>
     <p class="lead leadinfor">Front End Developer | Back End Developer</p>
   </section>
   <!-- Akhir Jumbotron -->
@@ -221,71 +222,136 @@
   <!-- Experience -->
   <section style="background-color: #2D3541" id="experience">
     <div class="container text-center">
-      <h1 data-aos="fade-up">Experience</h1>
-      <center>
-        <div data-aos="fade-down" id="carouselExampleInterval" class="carousel slide w-75" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img src="img/1.jpg" class="d-block w-75" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="img/2.jpg" class="d-block w-75" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/3.jpeg" class="d-block w-75" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/4.jpeg" class="d-block w-75" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </center>
-      <h1 class="mt-5" data-aos="fade-up">My Project</h1>
+      <h1 class="mt-5" data-aos="fade-up">Experience</h1>
       <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div data-aos="zoom-in" class="col">
-          <div style="background-color: #2D3541" class="card">
-            <div class="card-body">
-              <h5 class="card-title">Apotek Home</h5>
-            </div>
+        <div class="col">
+          <div class="card">
             <img src="img/project1.png" class="card-img-top" alt="...">
+            <div class="card-body text-dark">
+              <h5 class="card-title">CRUD Apotek</h5>
+              <button type="button" class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#modalproject1">
+                More Information
+              </button>
+            </div>
           </div>
         </div>
-        <div data-aos="zoom-in" class="col">
-          <div style="background-color: #2D3541" class="card">
+        <div class="col">
+          <div class="card text-dark">
+            <img src="img/project2-2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Apotek Login</h5>
+              <h5 class="card-title">CRUD Toko Bangunan</h5>
+              <button type="button" class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#modalproject2">
+                More Information
+              </button>
             </div>
-            <img src="img/project2.png" class="card-img-top" alt="...">
-          </div>
-        </div>
-        <div data-aos="zoom-in" class="col">
-          <div style="background-color: #2D3541" class="card">
-            <div class="card-body">
-              <h5 class="card-title">Apotek Service</h5>
-            </div>
-            <img src="img/project3.png" class="card-img-top" alt="...">
-          </div>
-        </div>
-        <div data-aos="zoom-in" class="col">
-          <div style="background-color: #2D3541" class="card">
-            <div class="card-body">
-              <h5 class="card-title">Apotek Cart</h5>
-            </div>
-            <img src="img/project4.png" class="card-img-top" alt="...">
           </div>
         </div>
       </div>
-    </div>
+      <!-- modal project 1 -->
+      <div class="modal fade" id="modalproject1" tabindex="-1" aria-labelledby="modalproject1" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title text-dark" id="modalproject1Label">Rincian</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <center>
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="img/project1.png" class="d-block w-75" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/project2.png" class="d-block w-75" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/project3.png" class="d-block w-75" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="img/project4.png" class="d-block w-75" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </center>
+              <br>
+              <div class="isinya text-dark text-start"">
+                <p class="">Crud apotek ini dibuat untuk memenuhi tugas kelompok akhir mata kuliah PRPL</p>
+                <ul>
+                  <li>Teknologi : HTML, CSS, Javascript, PHP, Bootstrap, AOS</li>
+                  <li>Database : MYSQli</li>
+                </ul>
+              </div>
+            </div>
+            <div class=" modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- modal project 2 -->
+        <div class="modal fade" id="modalproject2" tabindex="-1" aria-labelledby="modalproject2" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title text-dark" id="modalproject2Label">Rincian</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <center>
+                  <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/project2-1.png" class="d-block w-75" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/project2-2.png" class="d-block w-75" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/project2-3.png" class="d-block w-75" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/project2-4.png" class="d-block w-75" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2"
+                      data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2"
+                      data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </center>
+                <br>
+                <div class="isinya text-dark text-start"">
+                <p class="">Crud toko bangunan ini dibuat untuk memenuhi Responsi Praktikum Matakuliah Basis Data</p>
+                <ul>
+                  <li>Teknologi : HTML, CSS, Javascript, PHP dan Bootstrap</li>
+                  <li>Database : MYSQli</li>
+                </ul>
+              </div>
+            </div>
+            <div class=" modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
   </section>
   <!-- Akhir Experience -->
 
