--- a/index.html
+++ b/index.html
@@ -225,22 +225,24 @@
       <h1 class="mt-5" data-aos="fade-up">Experience</h1>
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
-          <div class="card">
+          <div style="background-color: #2D3541" class="card">
             <img src="img/project1.png" class="card-img-top" alt="...">
             <div class="card-body text-dark">
-              <h5 class="card-title">CRUD Apotek</h5>
-              <button type="button" class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#modalproject1">
+              <h5 class="card-title text-light">CRUD Apotek</h5>
+              <button style="background-color: white" type="button" class="btn mt-2" data-bs-toggle="modal"
+                data-bs-target="#modalproject1">
                 More Information
               </button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card text-dark">
+          <div style="background-color: #2D3541" class=" card text-dark">
             <img src="img/project2-2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">CRUD Toko Bangunan</h5>
-              <button type="button" class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#modalproject2">
+              <h5 class="card-title text-light">CRUD Toko Bangunan</h5>
+              <button style="background-color: white" type="button" class="btn mt-2 text-dark" data-bs-toggle="modal"
+                data-bs-target="#modalproject2">
                 More Information
               </button>
             </div>
