--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
               </center>
               <br>
               <div class="isinya text-dark text-start"">
-                <p class="">Crud apotek ini dibuat untuk memenuhi tugas kelompok akhir mata kuliah PRPL</p>
+                <p class="">This pharmacy crud was made to fulfill the final group assignment for the PRPL course</p>
                 <ul>
-                  <li>Teknologi : HTML, CSS, Javascript, PHP, Bootstrap, AOS</li>
-                  <li>Database : MYSQli</li>
+                  <li>Technology : HTML, CSS, Javascript, PHP, Bootstrap, AOS</li>
+                  <li>Databases : MYSQli</li>
                 </ul>
               </div>
             </div>
@@ -340,10 +340,10 @@
                 </center>
                 <br>
                 <div class="isinya text-dark text-start"">
-                <p class="">Crud toko bangunan ini dibuat untuk memenuhi Responsi Praktikum Matakuliah Basis Data</p>
+                <p class="">This building shop crud was made to fulfill the Database Course Practicum Response</p>
                 <ul>
-                  <li>Teknologi : HTML, CSS, Javascript, PHP dan Bootstrap</li>
-                  <li>Database : MYSQli</li>
+                  <li>Technology : HTML, CSS, Javascript, PHP dan Bootstrap</li>
+                  <li>Databases : MYSQli</li>
                 </ul>
               </div>
             </div>
