--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill2">
               <div class="card-skills text-center">
-                <img src="img/css.png" alt="" width="37">
+                <img src="img/css.png" alt="" width="54">
                 <h6>CSS</h6>
               </div>
             </div>
@@ -138,7 +138,7 @@
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill3">
               <div class="card-skills text-center">
-                <img src="img/php.png" alt="" width="65">
+                <img src="img/php.png" alt="" width="75">
                 <h6>PHP</h6>
               </div>
             </div>
@@ -146,7 +146,7 @@
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill4">
               <div class="card-skills text-center">
-                <img src="img/js.png" alt="" width="30">
+                <img src="img/js.png" alt="" width="37">
                 <h6>Javascript</h6>
               </div>
             </div>
@@ -154,24 +154,16 @@
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill5">
               <div class="card-skills text-center">
-                <img src="img/c++.png" alt="" width="45">
-                <h6>C++</h6>
+                <img src="img/Bootstrap.png" alt="" width="55">
+                <h6>Bootstrap<h6>
               </div>
             </div>
           </div>
           <div data-aos="zoom-in" class="col-md-4">
             <div class="main-skills skill6">
               <div class="card-skills text-center">
-                <img src="img/java.png" alt="" width="40">
-                <h6>Java</h6>
-              </div>
-            </div>
-          </div>
-          <div data-aos="zoom-in" class="col-md-4">
-            <div class="main-skills skill7">
-              <div class="card-skills text-center">
-                <img src="img/python.png" alt="" width="38">
-                <h6>Python</h6>
+                <img src="img/laravel.png" alt="" width="40">
+                <h6>Laravel</h6>
               </div>
             </div>
           </div>
@@ -222,7 +214,7 @@
   <!-- Experience -->
   <section style="background-color: #2D3541" id="experience">
     <div class="container text-center">
-      <h1 class="mt-5" data-aos="fade-up">Experience</h1>
+      <h1 class="" data-aos="fade-up">Experience</h1>
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div style="background-color: #2D3541" class="card">
@@ -342,7 +334,7 @@
                 <div class="isinya text-dark text-start"">
                 <p class="">This building shop crud was made to fulfill the Database Course Practicum Response</p>
                 <ul>
-                  <li>Technology : HTML, CSS, Javascript, PHP dan Bootstrap</li>
+                  <li>Technology : HTML, CSS, Javascript, PHP and Bootstrap</li>
                   <li>Databases : MYSQli</li>
                 </ul>
               </div>
