--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- /* Ijin Dulu kawan kalo mau copas */ -->
+
 <!doctype html>
 <html lang="en">
 
@@ -245,8 +247,7 @@
       <div class="modal fade" id="modalproject1" tabindex="-1" aria-labelledby="modalproject1" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title text-dark" id="modalproject1Label">Rincian</h5>
+            <div class="modal-header border-bottom-0">
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -287,9 +288,9 @@
                 </ul>
               </div>
             </div>
-            <div class=" modal-footer">
+            <!-- <div class=" modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -297,8 +298,7 @@
         <div class="modal fade" id="modalproject2" tabindex="-1" aria-labelledby="modalproject2" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title text-dark" id="modalproject2Label">Rincian</h5>
+              <div class="modal-header border-bottom-0">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -339,9 +339,9 @@
                 </ul>
               </div>
             </div>
-            <div class=" modal-footer">
+            <!-- <div class=" modal-footer border-bottom-0">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
